
0.5.1 - 2007-06-..

  * added script examples for rewriting and injection
  * added support for UNIX sockets
  * added protection against duplicate resultsets from a script
  * added missing dependency to libmysqlclient-dev to the INSTALL file
  * added support for pre-4.1 passwords in a 4.1 connection
  * added inj.query_time and inj.response_time into the lua scripts
  * changed --proxy.profiling to --proxy-skip-profiling
  * fixed assertion if read_query_result() is not provided 
    when PROXY_SEND_QUERY is used
  * fixed warning if connect_server() is not provided
  * fixed handling of duplicate ERR on COM_CHANGE_USER in MySQL 5.1.18+
  * fixed compile error with MySQL 4.1.x on missing COM_STMT_*
  * fixed mysql check in configure to die when mysql.h isn't detected

0.5.0 - 2007-06-19

  * added GPLv2 headers to the build
  * added automake/autoconf support
  * added cmake support
