@@ -218,6 +218,8 @@ function read_query_result( inj )
                "no_good_index_used = " .. flags.no_good_index_used .. ", " ..
                "no_index_used = " .. flags.no_index_used .. " }")
   print("| result.warning_count = " .. res.warning_count)
+  print("| result.affected_rows = " .. res.affected_rows)
+  print("| result.insert_id = " .. res.insert_id)
   if res.query_status then
     print("| result.query_status = " .. res.query_status)
   end
