@@ -7,7 +7,10 @@
   * added missing dependency to libmysqlclient-dev to the INSTALL file
   * added support for pre-4.1 passwords in a 4.1 connection
   * added inj.query_time and inj.response_time into the lua scripts
+  * added resultset.affected_rows and resultset.insert_id
+
   * changed --proxy.profiling to --proxy-skip-profiling
+
   * fixed assertion if read_query_result() is not provided 
     when PROXY_SEND_QUERY is used
   * fixed warning if connect_server() is not provided
